Native handle leak in java.io.WinNTFileSystem.list()

XMLWordPrintable

    • b03
    • windows
    • Not verified

        File: src/java.base/windows/native/libjava/WinNTFileSystem_md.c

        In function Java_java_io_WinNTFileSystem_list if memory allocation fails, the native handle obtained via FindFirstFileW() may not be released.

              Assignee:
              Ivan Gerasimov
              Reporter:
              Ivan Gerasimov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: