8207750: Native handle leak in java.io.WinNTFileSystem.list()

Reviewed-by: bpb